--- a/Problema8/Problema8.csproj
+++ b/Problema8/Problema8.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5271706B-366B-449C-8425-7EED647E894E}</ProjectGuid>
+    <ProjectGuid>{F7546F57-EF55-4643-A036-D662C799FD4F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Tema</RootNamespace>
-    <AssemblyName>Tema</AssemblyName>
+    <RootNamespace>Problema8</RootNamespace>
+    <AssemblyName>Problema8</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
