--- a/Problema31/Problema31.csproj
+++ b/Problema31/Problema31.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3FCE7CA2-B210-4419-AB28-3EEAA4530564}</ProjectGuid>
+    <ProjectGuid>{3E38B2BB-82EA-468D-9513-462836D1698C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Problema28</RootNamespace>
-    <AssemblyName>Problema28</AssemblyName>
+    <RootNamespace>Problema31</RootNamespace>
+    <AssemblyName>Problema31</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Problema28.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
