--- a/Problema32/Problema32.csproj
+++ b/Problema32/Problema32.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3FCE7CA2-B210-4419-AB28-3EEAA4530564}</ProjectGuid>
+    <ProjectGuid>{A180F9BC-41E6-468D-90B7-9E08F3312869}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Problema28</RootNamespace>
-    <AssemblyName>Problema28</AssemblyName>
+    <RootNamespace>Problema32</RootNamespace>
+    <AssemblyName>Problema32</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Problema28.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
