--- a/Problema56/Problema56.csproj
+++ b/Problema56/Problema56.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5F8B6F65-580A-44F6-AAE0-4CDE26E9EEB6}</ProjectGuid>
+    <ProjectGuid>{86F5B008-7514-40B6-8248-40FE4400E7A6}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Problema50</RootNamespace>
-    <AssemblyName>Problema50</AssemblyName>
+    <RootNamespace>Problema56</RootNamespace>
+    <AssemblyName>Problema56</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Problema56.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
